test/semantics/programs/invalid/reassign-wrong-type1.guav
# Should fail since static typing

x = 1234
x = true
